Fix header logo gap from increasing anchor font size

--- a/src/scss/components/layout/nav.scss
+++ b/src/scss/components/layout/nav.scss
@@ -34,7 +34,10 @@
         border-bottom: none;
 
         a {
+          align-items: center;
           color: colors(white, text);
+          display: flex;
+          height: 50px;
           padding: 0.8125rem paddings(s);
 
           @include on-event-hover {
